# video-services

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIG.md  Dockerfile  README.md  client.py  client_examples.py  curl.sh  dev.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_api_error.py  version.py
.claude/: CLAUDE.md
.filebundler/: ignore-patterns.txt  project-structure.md  settings.json
src/: app.py  client.py  config.py
src/core/: gif.py  video.py
src/routes/: __init__.py  video.py
tests/: conftest.py
tests/e2e/: test_real_videos.py
tests/fixtures/: create_sample_video.py  test_urls.py
tests/fixtures/vcr_cassettes/: linkedin_video_extraction.yaml  video_download_and_clip.yaml
tests/integration/: test_api.py  test_gif_api.py  test_video_with_vcr.py
tests/unit/core/: test_gif.py  test_video.py
tests/unit/routes/: test_video.py
