[project]
name = "video-services"
version = "0.1.0"
description = "FastAPI server for video processing atomic actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.6",
    "typed-ffmpeg[graph]>=3.5.1",
    "yt-dlp>=2025.6.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "vcrpy>=6.0.0",
    "pytest-timeout>=2.3.0",
]

dev = [
    "mypy>=1.16.1",
    "ruff>=0.8.0",
    "yt-dlp-types>=0.0.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
